examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__sets@{*{}}.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Set(
                                    Set {
                                        children: [
                                            ListSplat(
                                                ListSplat {
                                                    children: Expression(
                                                        PrimaryExpression(
                                                            Dictionary(
                                                                Dictionary {
                                                                    children: [],
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
