examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__strings.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [],
    [RANGE]
}
