examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__unicode_escape_sequences.snap
---
source: examples/ast-python/src/tests/corpus/literals.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 20,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 2,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
            _is_missing: false,
        },
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 2,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 1,
                        end_byte: 19,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 18,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                String(
                    String {
                        children: [
                            AstNodeId {
                                id: 3,
                                _marker: PhantomData<ast_python::generated::Interpolation_StringContent_StringEnd_StringStart>,
                            },
                            AstNodeId {
                                id: 4,
                                _marker: PhantomData<ast_python::generated::Interpolation_StringContent_StringEnd_StringStart>,
                            },
                            AstNodeId {
                                id: 8,
                                _marker: PhantomData<ast_python::generated::Interpolation_StringContent_StringEnd_StringStart>,
                            },
                        ],
                        _range: Range {
                            start_byte: 1,
                            end_byte: 19,
                            start_point: Point {
                                row: 1,
                                column: 0,
                            },
                            end_point: Point {
                                row: 1,
                                column: 18,
                            },
                        },
                        _id: 2,
                        _parent: Some(
                            1,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        StringStart(
            StringStart {
                _range: Range {
                    start_byte: 1,
                    end_byte: 2,
                    start_point: Point {
                        row: 1,
                        column: 0,
                    },
                    end_point: Point {
                        row: 1,
                        column: 1,
                    },
                },
                _id: 3,
                _parent: Some(
                    2,
                ),
                _is_missing: false,
            },
        ),
        StringContent(
            StringContent {
                children: [
                    AstNodeId {
                        id: 5,
                        _marker: PhantomData<ast_python::generated::EscapeInterpolation_EscapeSequence>,
                    },
                    AstNodeId {
                        id: 6,
                        _marker: PhantomData<ast_python::generated::EscapeInterpolation_EscapeSequence>,
                    },
                    AstNodeId {
                        id: 7,
                        _marker: PhantomData<ast_python::generated::EscapeInterpolation_EscapeSequence>,
                    },
                ],
                _range: Range {
                    start_byte: 2,
                    end_byte: 18,
                    start_point: Point {
                        row: 1,
                        column: 1,
                    },
                    end_point: Point {
                        row: 1,
                        column: 17,
                    },
                },
                _id: 4,
                _parent: Some(
                    2,
                ),
                _is_missing: false,
            },
        ),
        EscapeSequence(
            EscapeSequence {
                _range: Range {
                    start_byte: 2,
                    end_byte: 6,
                    start_point: Point {
                        row: 1,
                        column: 1,
                    },
                    end_point: Point {
                        row: 1,
                        column: 5,
                    },
                },
                _id: 5,
                _parent: Some(
                    4,
                ),
                _is_missing: false,
            },
        ),
        EscapeSequence(
            EscapeSequence {
                _range: Range {
                    start_byte: 7,
                    end_byte: 11,
                    start_point: Point {
                        row: 1,
                        column: 6,
                    },
                    end_point: Point {
                        row: 1,
                        column: 10,
                    },
                },
                _id: 6,
                _parent: Some(
                    4,
                ),
                _is_missing: false,
            },
        ),
        EscapeSequence(
            EscapeSequence {
                _range: Range {
                    start_byte: 12,
                    end_byte: 18,
                    start_point: Point {
                        row: 1,
                        column: 11,
                    },
                    end_point: Point {
                        row: 1,
                        column: 17,
                    },
                },
                _id: 7,
                _parent: Some(
                    4,
                ),
                _is_missing: false,
            },
        ),
        StringEnd(
            StringEnd {
                _range: Range {
                    start_byte: 18,
                    end_byte: 19,
                    start_point: Point {
                        row: 1,
                        column: 17,
                    },
                    end_point: Point {
                        row: 1,
                        column: 18,
                    },
                },
                _id: 8,
                _parent: Some(
                    2,
                ),
                _is_missing: false,
            },
        ),
    ],
}
